# YOLO

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  RELEASE_NOTES_v1.0.0.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
benchmarks/: benchmark_inference.py  benchmark_tracking.py
configs/: data.yaml  train.yaml
docs/: 01_MASTER_SPEC.md  02_ARCHITECTURE.md  03_TASKS.md  04_CODE_REVIEW_CHECKLIST.md  05_PYTHON_STYLE_GUIDE.md  06_COMPUTER_VISION_GUIDE.md  07_FASTAPI_GUIDE.md  08_DEPLOYMENT_GUIDE.md  09_TESTING_GUIDE.md  10_AI_ENGINEERING_PLAYBOOK.md  API_REFERENCE.md  BENCHMARK_RESULTS_TEMPLATE.md  DATASET_GUIDE.md  DEPLOYMENT.md  OPERATIONS.md  USER_GUIDE.md
src/api/: app.py  lifespan.py  routes.py
src/core/: detector.py  model_manager.py
src/scripts/: benchmark.py  check_gpu.py  check_yolo.py  predict.py  predict_video.py  track.py  train.py  validate.py  webcam.py
src/services/: inference_service.py  tracking_service.py  training_service.py  video_inference_service.py  webcam_inference_service.py
src/utils/: logging_config.py  video_utils.py
tests/: conftest.py  test_api.py  test_detector.py  test_evaluation_scripts.py  test_inference_service.py  test_lifespan.py  test_logging_config.py  test_model_manager.py  test_tracking_service.py  test_training_service.py  test_video_inference_service.py  test_video_utils.py  test_webcam_inference_service.py
tests/e2e/: test_api_e2e.py  test_image_inference_e2e.py
tests/integration/: test_tracking_integration.py  test_training_validation_integration.py
