[project]
name = "yolo-platform"
version = "1.0.0"
description = "Production-ready YOLO platform"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "ultralytics",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "opencv-python",
    "loguru",
    "PyYAML>=6.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "httpx>=0.28.0",
    "pytest-cov>=6.2.1",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.pytest.ini_options]
markers = [
    "integration: integration tests across multiple application layers",
    "e2e: end-to-end tests using production wiring and sample assets",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "src/scripts/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
